--- a/src/templates/entry.module.css
+++ b/src/templates/entry.module.css
@@ -2,12 +2,10 @@
     position: relative;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
     grid-template-areas: 
     "sidebar main";
-    min-height: 0;
+    width: 100%;
     height: 100%;
-    max-height: 100%;
 }
 
 /* Sidebar */
@@ -80,10 +78,11 @@
 .entry-main {
     grid-area: main;
     background: hsla(270, 50%, 50%, 0.2);
-    padding: 1rem;
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    width: 100%;
+    min-height: 100%;
     overflow-y: scroll;
 }
 
@@ -94,22 +93,22 @@
 
 @media only screen and (max-width: 600px) {
     .entry-container {
+        position: relative;
         display: flex;
         flex-direction: column;
-        max-height: 88vh;
+        flex: 1 1 auto;
+        min-height: 100%;
         overflow-y: scroll;
     }
     .entry-sidebar {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
         padding: 0.5rem;
+        margin: 0.5rem 0;
         min-height: min-content;
     }
     .entry-main {
         position: relative;
-        height: 100%;
         overflow-y: visible;
-        
+        min-height: 100%;
+        background: none;
     }
 }
